# sphinx-tabs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGES.txt  LICENSE  MANIFEST.in  Makefile  README.md  package.json  pylint.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: tests.yml
__tests__/: changeTabs.spec.js  deselectTabList.spec.js  selectTab.spec.js
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  other.html  other2.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  other.doctree  other2.doctree
docs/_sources/: index.rst.txt
docs/_static/: basic.css  documentation_options.js
sphinx_tabs/: __init__.py  jquery-ui.min.css  jquery-ui.min.js  tabs.css  tabs.js  tabs.py
sphinx_tabs/static/: doctools.js  tabs.css  tabs.js
sphinx_tabs/test/: test_basic.py  test_conditionalassets.py  test_nestedmarkup.py  test_notabs.py  testcase.py
test/: conf.py  index.rst  other.rst  run.sh  test_basic.py  test_conditionalassets.py  test_conditionalassets.py.bak  test_linenos.py  test_notabs.py.bak  testcase.py.bak
test/basic/: index.rst
test/conditionalassets/: other2.rst
test/linenos/: index.html.3
test/nestedmarkup/: index.html.3
test/notabs/: index.rst
tests/: conftest.py  test_basic.py  test_basic.py.bak  test_build.py  test_conditionalassets.py  test_linenos.py  test_nestedmarkup.py  test_nestedmarkup.py.bak  test_notabs.py  testcase.py
tests/test_basic/: test_build_html.html  test_build_html.xml
tests/test_build/: test_basic.html  test_basic.xml  test_conditional_assets_html_assets_policy_index_.html  (+22 more)
(+19 files in other folders)
